force-app/main/default/objects/Case/fields/CertificateIdentifierType__c.field-meta.xml
<CustomField>
    <fullName>CertificateIdentifierType__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates the ID Type of Certificate provided by the customer for the Legal Name Change</description>
    <label>Certificate Identifier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate Number</fullName>
            </value>
            <value>
                <fullName>Registration Number</fullName>
            </value>
            <value>
                <fullName>Registration Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>