force-app/main/default/objects/Case/fields/Change_To__c.field-meta.xml
<CustomField>
    <fullName>Change_To__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>A text field that consumes the use of property either Live in or Investment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Change To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>