force-app/main/default/objects/Case/fields/Chat_Topic__c.field-meta.xml
<CustomField>
    <fullName>Chat_Topic__c</fullName>
    <complianceGroup>Source - Twilio;Integrity - Accurate</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a Chat Topic which resulted this particular Case</description>
    <inlineHelpText>Link to a Chat Topic which resulted this particular Case</inlineHelpText>
    <label>Chat Topic</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Chat_Topic__c.Related_Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Can only choose Chat Topics related to this customer</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Chat_Topic__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>