force-app/main/default/objects/Case/fields/Circumstance__c.field-meta.xml
<CustomField>
    <fullName>Circumstance__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field control visibility of sub status field</description>
    <label>Circumstance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Deceased Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>