force-app/main/default/objects/Case/fields/Claimed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>Pending amount owed by the customer, which is the difference between Requested amount and Received amount</description>
    <formula>Amount__c -  Received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pending amount owed by the customer</inlineHelpText>
    <label>Claimed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>