force-app/main/default/objects/Case/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_TrustMe</complianceGroup>
    <description>This field contains the Client ID  populated by the Cloud Function during case creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>