force-app/main/default/objects/Case/fields/Closed_Once__c.field-meta.xml
<CustomField>
    <fullName>Closed_Once__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicated if this case has ever been closed once or not. Closed Case and Reopened Case will have this field set as true.</description>
    <label>Closed Once</label>
    <type>Checkbox</type>
</CustomField>