force-app/main/default/objects/Case/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Specifies a reason for why the customer has requested an account closure</description>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer did not mean to proceed to account opening</fullName>
            </value>
            <value>
                <fullName>Thought it was the ANZ App</fullName>
            </value>
            <value>
                <fullName>Unable to access existing ANZ accounts via ANZPlus app</fullName>
            </value>
            <value>
                <fullName>Lack of features</fullName>
            </value>
            <value>
                <fullName>Not satisfied with product</fullName>
            </value>
            <value>
                <fullName>No reason specified</fullName>
            </value>
            <value>
                <fullName>Bank Initiated Closure - Collections</fullName>
            </value>
            <value>
                <fullName>Other - please specify</fullName>
            </value>
            <value>
                <fullName>Bank initiated - Unacceptable Customer Behaviour</fullName>
            </value>
            <value>
                <fullName>Consolidation of accounts</fullName>
                <isActive>false</isActive>
                <label>Consolidation of accounts</label>
            </value>
            <value>
                <fullName>Missing features</fullName>
                <isActive>false</isActive>
                <label>Missing features</label>
            </value>
            <value>
                <fullName>Poor experience via Coach channel</fullName>
                <isActive>false</isActive>
                <label>Poor experience via Coach channel</label>
            </value>
            <value>
                <fullName>Product mis-sold in branch</fullName>
                <isActive>false</isActive>
                <label>Product mis-sold in branch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>