force-app/main/default/objects/Case/fields/Collateral_Assessment_ID__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Assessment_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Gearbox</complianceGroup>
    <description>Field representing collateral assessment task required to support a loan application.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Assessment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>