force-app/main/default/objects/Case/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>ANZ (originating bank is always ANZ)</description>
    <inlineHelpText>ANZ (originating bank is always ANZ)</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>