force-app/main/default/objects/Case/fields/Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Placeholder field to store the context id returned from the Aegis Harbour</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Context Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>