force-app/main/default/objects/Case/fields/Context_Type__c.field-meta.xml
<CustomField>
    <fullName>Context_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Placeholder field to store the context type returned from Aegis Harbour</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Context Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>