force-app/main/default/objects/Case/fields/Correct_Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Correct_Customer_Reference_Number__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Reference Number which correctly identifies the customer or invoice against which the payment is expected to be made.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference Number to be used in the BPAY payment.</inlineHelpText>
    <label>Correct Customer Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>