force-app/main/default/objects/Case/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>Id to trace the request, that last created or updated the object from Integration</description>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>