force-app/main/default/objects/Case/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Country Code of the Passport Provided by the Customer.</description>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFG</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>ALA</fullName>
                <label>Aland Islands</label>
            </value>
            <value>
                <fullName>ALB</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>DZA</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>ASM</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>AND</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AGO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AIA</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>ATA</fullName>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>ATG</fullName>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>ARG</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>ARM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>ABW</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AUS</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AUT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZE</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BHS</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BHR</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BGD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BRB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BLR</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BLZ</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>BEN</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BMU</fullName>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>BTN</fullName>
                <label>Bhutan</label>
            </value>
            <value>
                <fullName>BOL</fullName>
                <label>Bolivia, Plurinational State of</label>
            </value>
            <value>
                <fullName>BES</fullName>
                <label>Bonaire, Sint Eustatius and Saba</label>
            </value>
            <value>
                <fullName>BIH</fullName>
                <label>Bosnia and Herzegovina</label>
            </value>
            <value>
                <fullName>BWA</fullName>
                <label>Botswana</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>