force-app/main/default/objects/Case/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Controlling Post ID of the Customer</description>
    <label>CPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>