force-app/main/default/objects/Case/fields/Credit_Assessment_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Assessment_Expiry_Date__c</fullName>
    <complianceGroup>Source - Loan Domain;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Credit Assessment Expiry date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date/time the customer(s) must accept the Letter of Offer for this application. If this date/time lapses, this application must be withdrawn, and a new application is required if the customer(s) would like to proceed.</inlineHelpText>
    <label>Credit Assessment Expiry Date</label>
    <type>Date</type>
</CustomField>