force-app/main/default/objects/Case/fields/Credit_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Loan Domain</complianceGroup>
    <description>Id of the Credit Assessment</description>
    <externalId>true</externalId>
    <label>Credit Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>