force-app/main/default/objects/Case/fields/Credit_Reassessment_Time__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reassessment_Time__c</fullName>
    <description>Timestamp of when a credit reassessment was triggered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Reassessment Time</label>
    <type>DateTime</type>
</CustomField>