force-app/main/default/objects/Case/fields/Crediting_Account_BSB__c.field-meta.xml
<CustomField>
    <fullName>Crediting_Account_BSB__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>Unique branch code, where customer account is held branch details.</description>
    <inlineHelpText>Branch code</inlineHelpText>
    <label>BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>