force-app/main/default/objects/Case/fields/Crediting_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Crediting_Account_Number__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy - Personal Information</complianceGroup>
    <description>Unique account number provided to the customer</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Customer&apos;s account number</inlineHelpText>
    <label>Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>