force-app/main/default/objects/Case/fields/Crediting_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Crediting_Bank_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>Financial institution name where the beneficiary/originator&apos;s account is held</description>
    <inlineHelpText>Name of bank</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>