force-app/main/default/objects/Case/fields/Crediting_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Crediting_Receipt__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy - Personal Information</complianceGroup>
    <description>Sender who transferred funds to the recipient</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Remitter or sender who transferred funds to the recipient</inlineHelpText>
    <label>Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>