force-app/main/default/objects/Case/fields/Crediting_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Crediting_Recipient__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy - Personal Information</complianceGroup>
    <description>Beneficiary who received funds</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Beneficiary or payee who received the funds</inlineHelpText>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>