force-app/main/default/objects/Case/fields/Crediting_Trace_Line__c.field-meta.xml
<CustomField>
    <fullName>Crediting_Trace_Line__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>Indicates the payment channel used by customer to transact</description>
    <inlineHelpText>Mode of transfer</inlineHelpText>
    <label>Trace Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>