force-app/main/default/objects/Case/fields/CurrentAddress__c.field-meta.xml
<CustomField>
    <fullName>CurrentAddress__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer current Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>