force-app/main/default/objects/Case/fields/CurrentFirstName__c.field-meta.xml
<CustomField>
    <fullName>CurrentFirstName__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <description>Customer current Legal First Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>