force-app/main/default/objects/Case/fields/CurrentLastName__c.field-meta.xml
<CustomField>
    <fullName>CurrentLastName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer current Legal Last Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>