force-app/main/default/objects/Case/fields/CurrentMiddleName__c.field-meta.xml
<CustomField>
    <fullName>CurrentMiddleName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer current Legal Middle Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>