force-app/main/default/objects/Case/fields/Customer_Account_BSB__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_BSB__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>Unique branch code where the customer account is held.</description>
    <inlineHelpText>Branch code</inlineHelpText>
    <label>BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>