force-app/main/default/objects/Case/fields/Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce</complianceGroup>
    <description>Name of the customer, who is holding the account</description>
    <inlineHelpText>Name of the customer, who is holding the account</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>