force-app/main/default/objects/Case/fields/Customer_Contacted_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted_Merchant__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <description>To check whether the customer has attempted to contact the merchant in order to resolve the dispute</description>
    <inlineHelpText>Only applicable for dispute reason:
·         Cancellation of regular payment arrangement was unsuccessful
·         Credit has not been processed or processed incorrectly
·         Goods or services purchased but not received</inlineHelpText>
    <label>Customer Contacted Merchant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>