force-app/main/default/objects/Case/fields/Customer_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Description__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <label>Customer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>