force-app/main/default/objects/Case/fields/Customer_First_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Contacted__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date and time when the Customer contacted for this case and Status of the Case updated to &apos;Customer update pending&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer First Contacted</label>
    <type>DateTime</type>
</CustomField>