force-app/main/default/objects/Case/fields/Customer_Notification_Consent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Consent__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Non_Personal_Information</complianceGroup>
    <description>A One-off SMS would be sent to the customer to notify them of the complaint reference number.</description>
    <inlineHelpText>A One-off SMS would be sent to the customer to notify them of the complaint reference number.</inlineHelpText>
    <label>Customer Notification Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>