force-app/main/default/objects/Case/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Reference Number which identifies the customer or invoice against which the payment is made.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference Number used in the BPAY payment.</inlineHelpText>
    <label>Customer Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>