force-app/main/default/objects/Case/fields/Customer_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Residential_Address__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <formula>IF(Account.PersonContact.OtherStreet != &apos;&apos;,
    HYPERLINK(&apos;https://www.google.com/maps?q=&apos; + Account.PersonContact.OtherStreet + &apos; &apos; +
    Account.PersonContact.OtherCity + &apos; &apos; +
    Account.PersonContact.OtherState + &apos; &apos; +
    Account.PersonContact.OtherPostalCode + &apos; &apos; +
    Account.PersonContact.OtherCountry, Account.PersonContact.OtherStreet + BR() +
    Account.PersonContact.OtherCity + &apos;, &apos; +
    Account.PersonContact.OtherState + &apos; &apos; +
    Account.PersonContact.OtherPostalCode + BR() +
    Account.PersonContact.OtherCountry),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Residential Address</label>
    <type>Text</type>
</CustomField>