force-app/main/default/objects/Case/fields/CustomerOnboardingApplication__c.field-meta.xml
<CustomField>
    <fullName>CustomerOnboardingApplication__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship field that looks up to the Customer Onboarding Application object</description>
    <label>Customer Onboarding Application</label>
    <referenceTo>CustomerOnboardingApplication__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>