force-app/main/default/objects/Case/fields/Daon_Auth_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Daon_Auth_Request_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_DAON</complianceGroup>
    <description>Contains the DAON Authentication Request ID, which will be used to fetch the Selfie to be verified image.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Daon Authentication Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>