force-app/main/default/objects/Case/fields/Daon_Challenge_Type__c.field-meta.xml
<CustomField>
    <fullName>Daon_Challenge_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_DAON</complianceGroup>
    <description>Contains the DAON Challenge Type to indicate if the challenge type is REG_CHALLENGE or AUTH_REQUEST</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Daon Challenge Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>