force-app/main/default/objects/Case/fields/Daon_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Daon_Document_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_DAON</complianceGroup>
    <description>Contains the DAON Document Image Id, which will be used to fetch the Document Image.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Daon Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>