force-app/main/default/objects/Case/fields/Daon_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Daon_User_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_DAON</complianceGroup>
    <description>Contains the DAON User Id, which will be used to fetch the Document Image and the Enrolled Selfie.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Daon User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>