force-app/main/default/objects/Case/fields/Date_Account_Last_Debited__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Last_Debited__c</fullName>
    <complianceGroup>Integrity_Accurate;Source - Salesforce;Privacy_Non_Personal_Information</complianceGroup>
    <description>The date of the last direct debit which transacted on the account.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText> Date of the last debited transaction</inlineHelpText>
    <label>Date Account Last Debited</label>
    <type>Date</type>
</CustomField>