force-app/main/default/objects/Case/fields/Date_Case_allocated_to_CM__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_allocated_to_CM__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field captures the date when the case is allocated to the case manager.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Case allocated to CM</label>
    <type>DateTime</type>
</CustomField>