force-app/main/default/objects/Case/fields/Date_Goods_Were_Returned_Or_Services_can__c.field-meta.xml
<CustomField>
    <fullName>Date_Goods_Were_Returned_Or_Services_can__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Trusted;Privacy - Personal Information</complianceGroup>
    <description>Cancellation date of goods or services for the transaction which the customer wishes to dispute</description>
    <inlineHelpText>Only applicable for dispute reasons:
·         Credit has not been processed or processed incorrectly
·         Goods or services defective or not as described</inlineHelpText>
    <label>Good Returned Or Service Cancelled Date</label>
    <type>Date</type>
</CustomField>